# language-learner-python

./: EXERCISES.md  HISTORY.md  README.md  pyproject.toml
src/language_learner/: __main__.py  cli.py  default_settings.py
src/language_learner/ex01_hello_world/: __init__.py
tests/unit/ex01_hello_world/: test_init.py
