[project]
name = "language-learner-python"
version = "0.1.0"
description = "Learning repo for python"
authors = [
    {name = "Matt Mulligan",email = "matt@mattmulligan.net"}
]
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "pyapp ~=4.16",
    "pytest ~=8.4"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
